--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,38 @@
+# Ignore node_modules directory
 node_modules/
+
+# Ignore environment files
 .env
+.env.local
+.env.*.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Build artifacts
+dist/
+build/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# IDE-specific files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Temporary files
+*.tmp
+*.temp
+
+# Sequelize migration artifacts
+migrations/
+
+# SQLite database file
+database.sqlite
