--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
+    "seed": "ts-node src/scripts/seed.ts",
+    "seed:dev": "cross-env NODE_ENV=development ts-node src/scripts/seed.ts",
+    "seed:prod": "cross-env NODE_ENV=production ts-node src/scripts/seed.ts",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write .",
@@ -24,24 +27,30 @@
   "description": "",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "get-audio-duration": "^4.0.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
+    "music-metadata": "^10.7.0",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2",
     "sqlite3": "^5.1.7",
+    "uuid": "^11.0.5",
     "winston": "^3.17.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/aws-sdk": "^0.0.42",
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
@@ -51,7 +60,9 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.6",
     "@types/sequelize": "^4.28.20",
+    "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.13",
+    "cross-env": "^7.0.3",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.1",
